puppy watch sensortag tagging app

--- a/BleSensorTag/src/main/res/menu/device_activity_actions.xml
+++ b/BleSensorTag/src/main/res/menu/device_activity_actions.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/ic_action_about" 
         android:title="@string/about"/>
 
+    <item
+        android:id="@+id/opt_data"
+        android:icon="@drawable/ic_action_about"
+        android:title="Data"/>
+
 </menu>
