--- a/BleSensorTag/src/main/res/layout/fragment_tagging.xml
+++ b/BleSensorTag/src/main/res/layout/fragment_tagging.xml
@@ -2,11 +2,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity$HelpFragment" >
+    tools:context=".MainActivity$TaggingFragment" >
 
-    <WebView
-        android:id="@+id/webpage"
+    <TextView
+        android:id="@+id/time_tv"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="0dp"
+        android:gravity="center"
+        android:text="TAG / TIME"
+        android:textColor="#000000"
+        android:textSize="26sp" />
+
+    <Button
+        android:id="@+id/stand_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/time_tv"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/round_button"
+        android:text="서있기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/lay_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/stand_button"
+        android:layout_alignBottom="@+id/stand_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/round_button"
+        android:text="눕기 + 엎드리기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/sit_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stand_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/round_button"
+        android:text="앉기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/walk_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lay_button"
+        android:layout_alignBottom="@+id/sit_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/round_button"
+        android:text="걷기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/slowWalk_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sit_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/round_button"
+        android:text="느리게 걷기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/run_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/walk_button"
+        android:layout_alignBottom="@+id/slowWalk_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/round_button"
+        android:text="뛰기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/eat_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/slowWalk_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/round_button"
+        android:text="먹기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/dig_button"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/run_button"
+        android:layout_alignBottom="@+id/eat_button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/round_button"
+        android:text="파기"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/stop_button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/round_stop_button"
+        android:text="STOP"
+        android:textColor="#ffffff"
+        android:textSize="16sp" />
 
 </RelativeLayout>
