--- a/BleSensorTag/src/main/res/layout/fragment_scan.xml
+++ b/BleSensorTag/src/main/res/layout/fragment_scan.xml
@@ -27,20 +27,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="50dp"
         android:gravity="center"
+        android:visibility="invisible"
         android:text="@string/nodevice"
         android:textSize="14sp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/image"
-        android:gravity="center"
-        android:src="@drawable/ti_stk_2c_pos_rgb_png" />
 
     <TextView
         android:id="@+id/status"
